--- a/css/style.css
+++ b/css/style.css
@@ -143,13 +143,16 @@ h2 {
     background-color: var(--primary);
     color: white;
     border: none;
-    padding: 0.75rem 1.5rem;
+    padding: 1rem 1rem;
     border-radius: var(--radius);
     font-weight: 500;
     cursor: pointer;
     transition: background-color 0.2s ease;
-    width: 100%;
-    font-size: 1rem;
+    width: 50%;
+    max-width: 300px;
+    font-size: 0.9rem;
+    display: block;
+    margin: 20px auto;
 }
 
 .submit-btn:hover {
@@ -294,7 +297,6 @@ h2 {
     transform: translateX(30px);
 }
 
-/* Responsividade */
 @media (max-width: 992px) {
     .form-container {
         padding: 2rem;
